--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -86,6 +86,11 @@ header{
                 color: black;
                 transition: color 0.3s, background-color 0.3s;
             }
+            @media (min-width:1100px){
+              .menu1{
+                  display: none;
+              }
+            }
             @media (max-width: 991px) {
                 header .left-container nav {
                   display: none;
